--- a/index.html
+++ b/index.html
@@ -262,7 +262,36 @@
     </section>
     <p class="section-two-footer"> <a href="">see more <i class="fa-solid fa-arrow-right"></i> </a></p>
 
+    <section class="third-section">
+        <div class="images">
+            <img src="/influencer-gear-main/images/gear.png" alt="">
+        </div>
+        <div class="img-info">
+            <h2>Featured products at one place</h2>
+            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+            <button>join now  <i class="fa-solid fa-arrow-right"></i> </button>
+        </div>
+    </section>
    </main>
   
 </body>
+<footer> 
+    
+    <div class="footer-info">
+        <h2>Influencer products</h2>
+        <p>Copyright © 2020  influencer products</p>
+    <p>All rights reserved</p>
+    </div>
+    <div class="social">
+        <div class="facebook">
+            <i class="fa-brands fa-facebook"></i>
+        </div>
+        <div class="insta">
+            <i class="fa-brands fa-instagram"></i>
+        </div>
+        <div class="twiter">
+            <i class="fa-brands fa-twitter"></i>
+        </div>
+    </div>
+</footer>
 </html>
