--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
          
      
     </section>
-    <p class="section-two-footer"> <a href="">see more <i class="fa-solid fa-arrow-right"></i> </a></p>
+    <p class="section-two-footer"> <a href="">see more <i class="fa-solid fa-arrow-right icons"></i> </a></p>
 
     <section class="third-section">
         <div class="images">
